yarn lock inclusion (#1)
* lockfile update

--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,9 @@ logs/
 *.log
 
 # Lockfiles (if using only one package manager)
-yarn.lock
-# package-lock.json
-# pnpm-lock.yaml
+# yarn.lock
+package-lock.json
+pnpm-lock.yaml
 
 # Misc
 *.swp
