--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
     "name": "@allemandi/gacha-engine",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Practical, type-safe toolkit for simulating and understanding gacha rates and rate-ups.",
     "main": "dist/index.cjs",
     "module": "dist/index.module.js",
     "types": "./dist/index.d.ts",
     "unpkg": "dist/index.umd.js",
     "source": "src/index.ts",
+     "exports": {
+        "import": {
+            "types": "./dist/index.d.ts",
+            "default": "./dist/index.module.js"
+        },
+        "require": {
+            "types": "./dist/index.d.ts",
+            "default": "./dist/index.cjs"
+        }
+    },
+      "files": [
+        "dist",
+        "README.md",
+        "LICENSE"
+    ],
     "repository": "https://github.com/allemandi/gacha-engine.git",
     "author": "allemandi <69766017+allemandi@users.noreply.github.com>",
     "license": "MIT",
