--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*.*.*'
 
+permissions:
+  id-token: write      # Required for OIDC auth
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -14,13 +17,20 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.19.0
+          node-version: 20
           registry-url: 'https://registry.npmjs.org/'
           cache: 'yarn'
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
-      
-      - run: yarn publish --non-interactive --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # Install dependencies using Yarn
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      # Build package
+      - name: Build package
+        run: yarn build
+
+      # npm publish using OIDC (Yarn publish cannot use OIDC)
+      - name: Publish to npm
+        run: |
+          npm install -g npm@latest
+          npm publish --provenance --access public
